Require Java 9